@@ -1,3 +1,9 @@
+2015-12-18  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Add a cstr_to_fstr function to LHAGlue.cc, for improved C++ to
+	Fortran string conversion (handling length limits, padding rather
+	than zero-termination, etc.)
+
 2015-12-17  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Add PDF::print() protection against being unable to read the PDF
